Fixed issue with alert on create and aligned the search box; set up basic flow of storing games, questions, images.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,7 +85,7 @@
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #eaeaea;
+    background-color: #f6f6f6;
     /*background-color: #82a8d5;*/
 }
 
